bhushan::webcam in ornaments

--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -18,7 +18,7 @@
                         <!-- Lead Drop Down -->
                         <div class="row">
                             <div class="col-4 form-label">
-                                <mat-label class="mandatory">Lead</mat-label>
+                                <mat-label>Lead</mat-label>
                             </div>
 
                             <div class="col-8">
@@ -41,7 +41,7 @@
 
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label class="mandatory">Source</mat-label>
+                                <mat-label>Source</mat-label>
                             </div>
 
                             <div class="col-8">
