delete pop in ornaments and webcam in packets

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -5,7 +5,7 @@
             <ng-template mat-tab-label>
                 Ornaments {{idx+1}}
                 <img *ngIf="OrnamentsData.length > 1" class="removeImageSize kt-padding-l-5 kt-pointer" [src]="'assets/media/icons/cancel.png'"
-                (click)="removeOrnaments(idx)" />
+                (click)="deleteOrnaments(idx)" />
             </ng-template>
             <ng-template mat-tab-body>
 
