--- a/gold-admin-frontend/src/assets/sass/global/components/base/mixins/_menu-vertical.scss
+++ b/gold-admin-frontend/src/assets/sass/global/components/base/mixins/_menu-vertical.scss
@@ -1026,7 +1026,7 @@
 						display: none;
 					}
 
-					.kt-menu__link-text {
+					.kt-menu__link-text, .kt-menu__link-count {
 						display: none;
 					}
 
