--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
@@ -75,6 +75,12 @@
                         {{element['customerDetails.customerUniqueId'] ? element['customerDetails.customerUniqueId'] : '-'}}
                     </mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="customerName">
+                    <mat-header-cell *matHeaderCellDef>Customer Name</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element["customerDetails.firstName"] || element["customerDetails.lastName"] ? (element["customerDetails.firstName"] + ' ' + element["customerDetails.lastName"] | titlecase) : '-'}}
+                    </mat-cell>
+                </ng-container>
                 <ng-container matColumnDef="mobileNumber">
                     <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
                     <mat-cell *matCellDef="let element">
