--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
@@ -167,43 +167,43 @@
                     </table>
                     <div *ngIf="showTextBoxBM && userType == 6">
                         <div class="row kt-padding-l-10">
-                            <div class="col-3 form-label">
-                                <label for="" class="kt-padding-l-10">Reason by B.M -</label>
+                            <div class="col-4 form-label">
+                                <label for="" class="kt-padding-l-10 m-0">Reason by B.M -</label>
                             </div>
-                            <div class="col-8 form-label">
+                            <div class="col-8 ">
                                 {{cceControls.reasonFromBm.value}}
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <ng-container *ngIf="editRating">
-                    <div *ngIf="(showTextBoxCce  && userType == 6)" class="col kt-margin-t-20 kt-margin-b-20"
-                        style="width: 600px; margin: auto">
-                        <div class="row">
-                            <div class="col-4">
-                                <label for="">Choose a reason</label>
-                            </div>
-                            <div class="col-8">
-                                <select class="form-control" formControlName="reasonForOther"
-                                    placeholder="reason for Incomplete" (change)="patchReason()">
-                                    <option value='' selected disabled>Choose a reason </option>
-                                    <option [value]="reason.description" *ngFor="let reason of reasons">
-                                        {{reason.description}}
-                                    </option>
-                                </select>
+                <!-- <ng-container *ngIf="editRating"> -->
+                <div *ngIf="(showTextBoxCce  && userType == 6)" class="col kt-margin-t-20 kt-margin-b-20"
+                    style="width: 600px; margin: auto">
+                    <div class="row">
+                        <div class="col-4 form-label">
+                            <label for="" class="kt-padding-l-10">Choose a reason</label>
+                        </div>
+                        <div class="col-8">
+                            <select class="form-control" formControlName="reasonForOther"
+                                placeholder="reason for Incomplete" (change)="patchReason()">
+                                <option value='' selected disabled>Choose a reason </option>
+                                <option [value]="reason.description" *ngFor="let reason of reasons">
+                                    {{reason.description}}
+                                </option>
+                            </select>
 
-                                <mat-form-field class="w-100 kt-margin-t-20"
-                                    *ngIf="cceControls.reasonForOther.value == 'Other'">
-                                    <textarea matInput formControlName="reasonFromCce"
-                                        placeholder="Reason for {{ cceControls.kycStatusFromCce.value }}"></textarea>
-                                    <mat-error>Field Required</mat-error>
+                            <mat-form-field class="w-100 kt-margin-t-20"
+                                *ngIf="cceControls.reasonForOther.value == 'Other'">
+                                <textarea matInput formControlName="reasonFromCce"
+                                    placeholder="Reason for {{ cceControls.kycStatusFromCce.value }}"></textarea>
+                                <mat-error>Field Required</mat-error>
 
-                                </mat-form-field>
-                            </div>
+                            </mat-form-field>
                         </div>
                     </div>
-                </ng-container>
+                </div>
+                <!-- </ng-container> -->
                 <div *ngIf="showTextBoxBM && userType== 5" class="col kt-margin-t-20 kt-margin-b-20"
                     style="width: 600px; margin: auto">
                     <mat-form-field class="w-100">
