cancel order in broker

--- a/gold-admin-frontend/src/app/views/pages/broker/orders/cancel-order/cancel-order.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/orders/cancel-order/cancel-order.component.html
@@ -2,7 +2,7 @@
 
 <kt-portlet *ngIf="orderData">
     <kt-portlet-body [class]="'kt-portlet__body--fit'">
-        <div class="row justify-content-center kt-padding-t-10 kt-padding-b-10" [ngStyle]="{'min-height':'80vh'}">
+        <div class="row justify-content-center kt-padding-t-10 kt-padding-b-10">
             <div class="col-10">
                 <table class="table table-borderless">
                     <tbody>
