--- a/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.html
+++ b/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.html
@@ -116,7 +116,7 @@
 
 	<!-- if menu item is cart then put cart count -->
 	<span *ngIf="item.count && cartTotalCount" class="kt-menu__link-text kt-menu__link-count pl-1">
-		({{cartTotalCount}})</span>
+		({{shoppingCartService.cartCount$ | async}})</span>
 </ng-template>
 
 <ng-template #menuItemSeparatorTemplate let-item="item" let-parentItem="parentItem">
