--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -45,7 +45,7 @@
                         </kt-approval>
                     </mat-tab>
                     <mat-tab label="Packets" 
-                        *ngIf="url == 'package-image-upload' || (action == 'edit' && customerDetail.loanPacketDetails.length>0)">
+                        *ngIf="url == 'packet-image-upload' || (action == 'edit' && customerDetail.loanPacketDetails.length>0)">
                         <!-- <ng-template> -->
                             <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab"
                             style="padding:0px !important"> 
