--- a/gold-admin-frontend/src/app/views/pages/admin/holidays/holiday-add/holiday-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/holidays/holiday-add/holiday-add.component.html
@@ -26,7 +26,7 @@
 
                         </div>
                     </div>
-                    <div class="row kt-margin-b-15">
+                    <div class="row">
                         <div class="col-3 pl-3 form-label">
                             <label class="text-color mandatory"> Event</label>
                         </div>
