--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -67,7 +67,7 @@
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let loan">
                         <!-- <div style="display: contents" class="kt-pointer" > -->
-                        <button (click)="new(loan)" class="addmore" *ngxPermissionsOnly="['loanApplicationAdd']"
+                        <button (click)="new(loan)" class="btn-transparent" *ngxPermissionsOnly="['loanApplicationAdd']"
                         >Add New Loan</button>
                         <!-- </div> -->
                     </mat-cell>
