--- a/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.scss
@@ -6,6 +6,9 @@
         border-radius: 8px;
         color: #454d67;
     }
+    th{
+        vertical-align: top;
+    }
     td{
         vertical-align: middle;
     }
