--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -25,8 +25,8 @@
                                 <select class="form-control" formControlName="lead"
                                     [class.isError]="controls.lead.touched && controls.lead.invalid">
                                     <option value="" [disabled]="true" [selected]="true"> Select Lead </option>
-                                    <option *ngFor="let branch of branches" [value]="branch.id">
-                                        {{branch.name | titlecase}}
+                                    <option *ngFor="let lead of leadSources" [value]="lead.id">
+                                        {{lead.leadName | titlecase}}
                                     </option>
                                 </select>
                                 <mat-error *ngIf="controls.lead.touched && controls.lead.errors?.required">
