--- a/gold-admin-frontend/src/app/views/pages/admin/masters/lead-source/lead-source-add/lead-source-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/lead-source/lead-source-add/lead-source-add.component.html
@@ -9,9 +9,9 @@
                             <label class="kt-padding-l-10 mandatory">Lead</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" class="form-control text-capitalize" formControlName="lead"
-                                [class.isError]="controls.lead.invalid &&  controls.lead.touched">
-                            <mat-error *ngIf="controls.lead.touched && controls.lead.errors?.required">
+                            <input type="text" class="form-control " formControlName="leadName"
+                                [class.isError]="controls.leadName.invalid &&  controls.leadName.touched">
+                            <mat-error *ngIf="controls.leadName.touched && controls.leadName.errors?.required">
                                 Required field
                             </mat-error>
                         </div>
