--- a/gold-admin-frontend/src/app/views/pages/admin/masters/packet-location/packet-location-list/packet-location-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/packet-location/packet-location-list/packet-location-list.component.html
@@ -5,7 +5,7 @@
 
                 <ng-container matColumnDef="location">
                     <mat-header-cell *matHeaderCellDef>Location </mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.mobileNumber}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.location | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
